--- a/main.css
+++ b/main.css
@@ -15,6 +15,11 @@ header{
     
 }
 
+.navbar-toggler-icon{
+    color: white;
+    background: white;
+}
+
 /* header::before{
     background-color: rgba(0, 0, 0, 0.005);
     content: '';
@@ -139,7 +144,7 @@ nav{
 }
 
 .state-images img{
-    height: 40rem;
+    /* height: 40rem; */
 }
 
 .state-text{
