--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body{
     font-family: 'Poppins', sans-serif;
     /* font-family: 'Roboto', sans-serif; */
     color: white;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 /* header style */
 header{
