Changes Made To Arrangements

--- a/main.css
+++ b/main.css
@@ -187,9 +187,9 @@ nav{
 }
 
 .add-ministry .btn{
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     color: black;
-    padding: 1rem;
+    padding: .8rem;
     font-weight: bold;
 }
 
