--- a/main.css
+++ b/main.css
@@ -441,3 +441,40 @@ footer{
 .copy{
     border-top: 1px solid white;
 }
+
+  /* Back to top button */
+
+  .back-to-top {
+    position: fixed;
+    display: none;
+    background: #F68624;
+    color: #fff;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+    line-height: 1;
+    font-size: 16px;
+    border-radius: 50%;
+    right: 15px;
+    bottom: 15px;
+    transition: background 0.5s;
+    z-index: 11;
+  }
+  
+  .back-to-top i {
+    padding-top: 12px;
+    color: #fff;
+  }
+
+  body::-webkit-scrollbar {
+    width: .5rem;
+}
+ 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #f68624;
+  outline: 1px solid slategrey;
+}
