--- a/auth/login.css
+++ b/auth/login.css
@@ -3,18 +3,18 @@ body{
     background-color: antiquewhite;
 }
 
-.signup-header{
+.login-header{
     background-color: rgba(255, 0, 0, 0.781);
     color: white; 
     padding: 2rem;
     font-weight: bolder;
 }
 
-.signup-header h3{
+.login-header h3{
     font-weight:400;
 }
 
-.signup-form{
+.login-form{
     margin-top: 3rem;
 }
 
@@ -29,7 +29,7 @@ button{
 }
 
 form i{
-    /* font-size: .02rem !important; */
+    font-size: .02rem !important;
 }
 
 .rrequired:after { 
