--- a/main.css
+++ b/main.css
@@ -56,13 +56,13 @@ nav{
 }
  .header-text h1 span{
      color: #c82333;
-     font-size: inherit;
+     font-size: 1.1em;
      font-weight: bolder;
  }
 
  .header-sub-text{
      color: white;
-     font-size: 2rem;
+     font-size: 1.4rem;
  }
 
  /* .search .row{
@@ -125,12 +125,18 @@ nav{
 
 #section1 h1 span{
     border-bottom: 1px solid white;
-    /* padding-bottom: 1rem; */
+    font-size: .8em;
+    padding-bottom: 1rem;
 }
 
 .block{
     margin-top: 7rem;
     padding-bottom: 8rem;
+}
+
+.block p{
+    font-size: .8em;
+    margin-top: 1rem;
 }
 
 /* Section 2 */
@@ -158,8 +164,18 @@ nav{
     top: -5.5rem
 }
 
+.item{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+
+
+
 .state-images .col-lg-3{
     max-width: inherit !important;
+    max-height: inherit !important;
 }
 
 .state-images .col-12{
@@ -167,6 +183,7 @@ nav{
 }
 .state-images .col-md-6{
     max-width: inherit !important;
+
 }
 
 /* section3 starts here */
@@ -178,7 +195,7 @@ nav{
 
 .add-ministry{
     background-color: #c82333;
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     color: white;
 }
 
@@ -212,17 +229,16 @@ nav{
 
 .chr-name{
     font-weight: 500;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
 }
 
-/* .chr-hr{
-    font-weight: bold;
-    font-size: 1.1rem;
-} */
+.chr-details{
+    font-size: .8rem;
+}
 
 .chr-time{
     font-weight: lighter;
-    font-size: .95rem;
+    font-size: .75rem;
 }
 
 .chr-phone{
