--- a/add-listing/main.css
+++ b/add-listing/main.css
@@ -118,3 +118,30 @@ input[type="file"] {
     display: none;
 }
 
+/* Footer */
+footer{
+    margin-top: 4rem;
+    color: black;
+    background-color: #DA70D6;
+}
+
+.ministries p{
+    font-size: .8rem;
+}
+
+.social-media a{
+    text-decoration: none;
+    color: inherit !important;
+    font-size: 1.7rem;
+}
+
+.discover a, .company a{
+    text-decoration: none;
+    color: inherit !important;
+    display: block;
+}
+
+.copy{
+    border-top: 1px solid white;
+}
+
