--- a/add-listing/main.css
+++ b/add-listing/main.css
@@ -120,7 +120,10 @@ input[type="file"] {
 }
 
 label.g-img{
-    left: 7em;
+    left: 5em;
+}
+.gallery .label span{
+    left: -1rem;
 }
 
 /* input.agree {
