--- a/add-listing/main.css
+++ b/add-listing/main.css
@@ -17,20 +17,28 @@ nav{
     color: white !important;
 }
 
+header{
+    background-color: #DA70D6;
+}
+
 .navbar-brand, .nav-link{
     color: black !important;
     font-weight: bold;
 }
 
 /* Section 1 */
+#section-1{
+    background-color: #DA70D6;
+}
 #section-1 h1{
     font-size: 2.8rem;
     font-weight: bolder;
+    background-color: #DA70D6;
 }
 
 /* Section 2 */
 #section-2{
-    margin-top: 5rem;
+    margin-top: 0rem;
 }
 
 #section-2 .container{
