--- a/add-event/main.css
+++ b/add-event/main.css
@@ -15,6 +15,10 @@ nav h3{
     padding: 2rem;
 }
 
+.header-text h3{
+    font-size: 1.5em;
+}
+
 /* main */
 main .container{
     background: white;
